--- a/show.html
+++ b/show.html
@@ -37,7 +37,7 @@ function transformToAssocArray( prmstr ) {
 }
 
 </script>
-<script src="https://www.cwb.gov.tw/Data/js/rainfall/RainfallImg_Day.js"></script>
+<script src="https://www.cwa.gov.tw/Data/js/rainfall/RainfallImg_Day.js"></script>
 
 <div>
 
