--- a/show.html
+++ b/show.html
@@ -151,7 +151,7 @@ function transformToAssocArray( prmstr ) {
     }
  
   }
-  document.getElementById("link").src = "https://www.cwb.gov.tw/Data/rainfall/" + img + ".jpg";
+  document.getElementById("link").src = "https://www.cwa.gov.tw/Data/rainfall/" + img + ".jpg";
   document.getElementById("link").style.display = "block";
   document.getElementById("map").style.display = "block";
   document.getElementById("svg").style.display = "block";    
